@@ -322,8 +322,22 @@
         <xs:element name="lifestyle" minOccurs="1" maxOccurs="unbounded">
           <xs:complexType>
             <xs:sequence>
-              <xs:element name="name" type="xs:string" minOccurs="1" maxOccurs="1" />
+              <xs:element name="baselifestyle" type="xs:string" minOccurs="1" maxOccurs="1" />
               <xs:element name="months" type="xs:integer" minOccurs="1" maxOccurs="1" />
+              <xs:element name="qualities" minOccurs="0" maxOccurs="1">
+                <xs:complexType>
+                  <xs:sequence>
+                    <xs:element name="quality" minOccurs="1" maxOccurs="unbounded">
+                      <xs:complexType>
+                        <xs:sequence>
+                          <xs:element name="name" minOccurs="1" maxOccurs="1" />
+                          <xs:element name="rating" minOccurs="0" maxOccurs="1" />
+                        </xs:sequence>
+                      </xs:complexType>
+                    </xs:element>
+                  </xs:sequence>
+                </xs:complexType>
+              </xs:element>
             </xs:sequence>
           </xs:complexType>
         </xs:element>
@@ -357,7 +371,7 @@
                   <xs:sequence>
           <xs:element name="name" type="xs:string" minOccurs="1" maxOccurs="1" />
           <xs:element name="category" type="xs:string" minOccurs="1" maxOccurs="1" />
-          <xs:element name="nuyenbp" type="xs:integer" minOccurs="0" maxOccurs="1" />
+          <xs:element name="nuyenbp" type="xs:integer" minOccurs="1" maxOccurs="1" />
           <xs:element ref="armors" minOccurs="0" maxOccurs="1" />
                     <xs:element ref="attributes" minOccurs="0" maxOccurs="1" />
           <xs:element ref="biowares" minOccurs="0" maxOccurs="1" />
