@@ -6,6 +6,7 @@ Application Changes:
 - Exposed the selection of AI programs to the main RequirementsMet method. Prevents issues with programs not being translated, offends me slightly less. Fixes #3350
 - Fixed processing of FixedValues on the Select Gear window.
 - Refactored string processing method for Gear Ratings into a single method. Allows MinRating, MaxRating, MatrixAttributes and TotalBonusMatrixBoxes (for LivingPersona only) to use complex strings such as {Parent DeviceRating}. Fixes #3360
+- Foxed some behaviour in creation of packs to properly allow creatio nof lifestyles.
 
 Data Changes:
 - Fixed incorrect underbarrel weapon name for the Nissan Optimum II that caused a crash. Fixes part of #3344
@@ -14,6 +15,7 @@ Data Changes:
 - Fixed incorrect price for the Reakt geneware. 
 - Allowed the Peak-Discharge energy packs to be added as accessories to weapons with External Source ammo types. Fixes #3361.
 - Fixed incorrect specialisation requirement for the Death Dealer quality.
+- Foxed missing nuyen bp costs for the ShadowNET starter pack and Runnerhub Basic Gear Pack. Fixes #3368
 
 Build 204
 
